--- a/discussion.css
+++ b/discussion.css
@@ -29,3 +29,22 @@
   width: 20px;
   background: #C8C8C8;
 }
+
+.personaStacking {
+  margin-left: -3px;
+}
+.personaStacking .vss-Persona-content {
+  box-shadow: 0px 0px 0px 1.5px white;
+}
+
+.zIndex-0 {
+  z-index: 0;
+}
+
+.zIndex-1 {
+  z-index: 1;
+}
+
+.zIndex-2 {
+  z-index: 2;
+}
